--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,2 +1,6 @@
-<app-company-list></app-company-list>
-<router-outlet></router-outlet>
+<div class="d-flex w-100 h-100">
+    <app-company-list></app-company-list>
+    <div class="flex-grow-1">
+        <router-outlet></router-outlet>
+    </div>
+</div>
