--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -1,1 +1,18 @@
-<p>company-list works!</p>
+<div class="border h-100">
+    <div class="d-flex flex-column p-3 border">
+        <div class="d-flex align-items-center justify-content-between mb-3">
+            <h4>Companies</h4>
+            <span class="bi bi-plus-circle"></span>
+        </div>
+        <input type="search" class="form-control" placeholder="Search">
+    </div>
+    <div>
+        <ul class="list-group">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <span>Jinal</span>
+                <span>Tandel</span>
+                <span class="bi bi-x-square"></span>
+            </li>
+        </ul>
+    </div>
+</div>
