feat:postService is completed

--- a/src/app/company/company-form/company-form.component.html
+++ b/src/app/company/company-form/company-form.component.html
@@ -51,7 +51,7 @@
 
         <div class="d-flex justify-content-end">
             <button type="reset" class="btn me-2 btn-outline-danger" (click)="onCancel()">Cancel</button>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="submit" class="btn btn-outline-success">Save</button>
         </div>
     </form>
 </div>
