--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -2,13 +2,13 @@
     <div class="d-flex flex-column p-3 border">
         <div class="d-flex align-items-center justify-content-between mb-3">
             <h4>Companies</h4>
-            <span class="bi bi-plus-circle"></span>
+            <span class="bi bi-plus-circle" (click)="onAddCompany()"></span>
         </div>
         <input type="search" class="form-control" placeholder="Search">
     </div>
     <div>
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let company of companyList">
+            <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEdit(company)" *ngFor="let company of companyList">
                 <span>{{company.companyName | nameLogoPipe}}</span>
                 <span>{{company.companyName}}</span>
                 <span class="bi bi-x-square"></span>
