--- a/src/app/company/company-list/company-list.component.scss
+++ b/src/app/company/company-list/company-list.component.scss
@@ -1,6 +1,7 @@
 .bi-plus-circle{
     font-size: 30px;
-    color:gray
+    color:gray;
+    cursor: pointer;
 }
 .bi-x-square{
     font-size: 25px;
