--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -11,7 +11,7 @@
             <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEdit(company)" *ngFor="let company of companyList">
                 <span>{{company.companyName | nameLogoPipe}}</span>
                 <span>{{company.companyName}}</span>
-                <span class="bi bi-x-square"></span>
+                <span class="bi bi-x-square" (click)="onDeleteCompany(company.id)"></span>
             </li>
         </ul>
     </div>
