--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -8,7 +8,7 @@
     </div>
     <div>
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEdit(company)" *ngFor="let company of companyList">
+            <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEditCompany(company)" *ngFor="let company of companyList">
                 <span>{{company.companyName | nameLogoPipe}}</span>
                 <span>{{company.companyName}}</span>
                 <span class="bi bi-x-square" (click)="onDeleteCompany(company.id)"></span>
