--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -9,7 +9,7 @@
     <div>
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEdit(company)" *ngFor="let company of companyList">
-                <span>{{company.companyName | nameLogoPipe}}</span>
+                <span class="companylogo d-flex align-items-center justify-content-center">{{company.companyName | nameLogoPipe}}</span>
                 <span>{{company.companyName}}</span>
                 <span class="bi bi-x-square" (click)="onDeleteCompany(company.id)"></span>
             </li>
