--- a/src/app/company/company-list/company-list.component.scss
+++ b/src/app/company/company-list/company-list.component.scss
@@ -7,3 +7,9 @@
     font-size: 25px;
     color: red;
 }
+.companylogo{
+    height:35px;
+    width:35px;
+    border-radius: 50%;
+    border: 1px solid black;
+}
