--- a/src/app/company/company-form/company-form.component.html
+++ b/src/app/company/company-form/company-form.component.html
@@ -1,4 +1,5 @@
 <div class="p-3">
+    <h3 class="mb-3">{{title}} Company Details</h3>
     <form class="border p-4 rounded" [formGroup]="companyForm" #form="ngForm" (ngSubmit)="onSaveCompany()">
         <!-- <pre> {{form?.submitted}}</pre> -->
         <input class="form-control mb-3" type="text" placeholder="Company Name" formControlName="companyName"
