--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -4,11 +4,11 @@
             <h4>Companies</h4>
             <span class="bi bi-plus-circle" (click)="onAddCompany()"></span>
         </div>
-        <input type="search" class="form-control" placeholder="Search">
+        <input type="search" class="form-control" placeholder="Search" [(ngModel)]="searchInput">
     </div>
     <div>
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEditCompany(company)" *ngFor="let company of companyList">
+            <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEditCompany(company)" *ngFor="let company of companyList | search: searchInput">
                 <span class="companylogo d-flex align-items-center justify-content-center">{{company.companyName | nameLogoPipe}}</span>
                 <span>{{company.companyName}}</span>
                 <span class="bi bi-x-square" (click)="onDeleteCompany(company.id)"></span>
