--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -1,9 +1,9 @@
-<nav class="d-flex w-100 flex-column bg-light p-2 border">
+<nav class="d-flex w-100 flex-column bg-primary p-2 border text-white">
     <div class="d-flex align-items-center">
         <a class="nav-link">
             <span class="bi bi-list me-3"></span>
         </a>
         <h4>Companies</h4>
     </div>
-    <xng-breadcrumb class="ms-4"></xng-breadcrumb>
+    <xng-breadcrumb class="ms-4 text-white"></xng-breadcrumb>
 </nav>
