--- a/src/app/company/company-form/company-form.component.html
+++ b/src/app/company/company-form/company-form.component.html
@@ -1,5 +1,5 @@
 <div class="p-3">
-    <h3 class="mb-3">{{title}} Company Details</h3>
+    <h3 class="mb-3 text-primary">{{title}} Company Details</h3>
     <form class="border p-4 rounded" [formGroup]="companyForm" #form="ngForm" (ngSubmit)="onSaveCompany()">
         <!-- <pre> {{form?.submitted}}</pre> -->
         <input class="form-control mb-3" type="text" placeholder="Company Name" formControlName="companyName"
@@ -51,8 +51,8 @@
         </div>
 
         <div class="d-flex justify-content-end">
-            <button type="reset" class="btn me-2 btn-outline-danger" (click)="onCancel()">Cancel</button>
-            <button type="submit" class="btn btn-outline-success">Save</button>
+            <button type="reset" class="btn me-2 btn-danger" (click)="onCancel()">Cancel</button>
+            <button type="submit" class="btn btn-success">Save</button>
         </div>
     </form>
 </div>
