--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -8,9 +8,14 @@
     </div>
     <div>
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center" (click)="onEditCompany(company)" *ngFor="let company of companyList | search: searchInput">
-                <span class="companylogo text-white bg-primary d-flex align-items-center justify-content-center">{{company.companyName | nameLogoPipe}}</span>
-                <span>{{company.companyName}}</span>
+            <li class="list-group-item d-flex align-items-center"
+                *ngFor="let company of companyList | search: searchInput">
+                <div class="d-flex flex-grow-1 align-items-center me-3" (click)="onEditCompany(company)">
+                    <span
+                        class="companylogo text-white bg-primary d-flex align-items-center justify-content-center">{{company.companyName
+                        | nameLogoPipe}}</span>
+                    <span class="ms-3 text-nowrap">{{company.companyName}}</span>
+                </div>
                 <span class="bi bi-x-square" (click)="onDeleteCompany(company.id)"></span>
             </li>
         </ul>
