--- a/src/app/company/company-form/company-form.component.html
+++ b/src/app/company/company-form/company-form.component.html
@@ -38,7 +38,7 @@
 
         <div class="input-group mb-3">
             <!-- <input type="file" class="form-control" id="inputGroupFile02" placeholder="Select Logo"> -->
-            <input type="text" class="form-control" id="inputGroupFile02" placeholder="Select Logo"
+            <input type="file" class="form-control" id="inputGroupFile02" placeholder="Select Logo"
                 formControlName="companyLogo">
             <button type="button" class="input-group-text" (click)="uploadFile()">Browse</button>
         </div>
