--- a/src/app/company/company-list/company-list.component.scss
+++ b/src/app/company/company-list/company-list.component.scss
@@ -13,3 +13,11 @@
     width:40px;
     border-radius: 50%;
 }
+.logo-wrapper{
+    height:50px;
+    width:50px;
+
+    img{
+        border-radius: 50%;
+    }
+}
