fix:searchData by company tag & description

--- a/src/app/company/company-list/company-list.component.scss
+++ b/src/app/company/company-list/company-list.component.scss
@@ -13,3 +13,9 @@
     width:40px;
     border-radius: 50%;
 }
+.description{
+    width:100px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
