--- a/src/app/core/navbar/header/header.component.html
+++ b/src/app/core/navbar/header/header.component.html
@@ -8,6 +8,7 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a routerLink="company" class="text-white">Company</a></li>
+            <li *ngIf="!companyName" class="breadcrumb-item"><a routerLink="company" class="text-white">Company Form</a></li>
             <li class="breadcrumb-item"><a [routerLink]="['company','edit',companyId]" class="text-white"> {{companyName}}</a></li>
         </ol>
     </nav>
